# exercise3

./: CMakeLists.txt  README.md  main.cpp
data/: person.xml
